// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse 1`] = `
{
  "isAndroid": true,
  "isIE": false,
  "isMobile": true,
  "isSafari": false,
}
`;

exports[`ua 1`] = `
{
  "isAndroid": false,
  "isIE": false,
  "isMobile": false,
  "isSafari": false,
}
`;
